# agentic-research-assistant

./: .gitignore  BACKLOG.md  README.md  SPECS.md  main.py  pyproject.toml
app/: __init__.py  commands.py  stages.py  tui.py
app/domain/: models.py
app/engines/: __init__.py  coordinator.py  research.py  review.py  writing.py
app/services/: __init__.py  citations.py  export.py  ingest.py  sources.py
app/storage/: repository.py
app/ui/: __init__.py  presentation.py  runtime.py
app/workflow/: content.py  research.py
data/: input - AI for senior leaders.md  input - ai capex out of control?.txt  input - pitfalls and challenges of cloud enterprise transformations.md  input.txt
exports/: final-1124acb1.md  final-a2965bb2.md
