[project]
name = "agentic-tasks"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "langchain>=0.3.0",
    "langchain-openai>=0.3.0",
    "pypdf>=5.6.0",
    "python-dotenv>=1.0.1",
    "textual>=0.86.0",
]

[project.scripts]
agentic-research = "app.tui:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = true

[tool.hatch.build.targets.wheel]
packages = ["app"]